<resources>
    <string name="app_name">Gadget Gang</string>

    <string name="onBoardingTitle">Lorem Ipsum</string>
    <string name="onBoardingDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown.</string>

    <!-- login-->
    <string name="loginText">Sign In</string>
    <string name="signInEmailHint">Enter your Email</string>
    <string name="signInPasswordHint">Enter your Password</string>
    <string name="signInForgotPassword">Forgot Password?</string>
    <string name="signInRememberme">Remember me</string>
    <string name="newAccount">Don\'t have an account? <b>Sign up</b></string>

    <!-- signup-->
    <string name="signupText">Sign Up</string>
    <string name="signUpNameText">Enter your Full Name</string>
    <string name="signUpPhoneText">Enter your Phone number</string>
    <string name="backLogin">Create Account before? <b>Sign In</b></string>

    <!-- forgot password-->
    <string name="forgot_password_text">Forgot Password</string>
    <string name="forgot_submit_btn">Submit</string>

    <!-- toolbar-->
    <string name="toolbar_title">Gadget Gang</string>

    <string name="category_title">Choose Category</string>
    <string name="category_1">Smartphone</string>
    <string name="category_2">Computer</string>
    <string name="category_3">Smartwatch</string>
    <string name="category_4">Headphone</string>
    <string name="category_5">Photography</string>
    <string name="category_6">Video Game</string>
    <string name="category_7">Accessories</string>
    <string name="trending_title">Trending</string>

    <!--product details-->
    <string name="product_name">Beats solo 3</string>
    <string name="product_price">$280</string>
    <string name="product_rating">4.6</string>
    <string name="product_color">Select Color</string>
    <string name="product_details">Color</string>
    <string name="product_stock">Out of Stock</string>
    <string name="product_specification">Specification</string>
    <string name="productDesc">Beats Solo3 Wireless on-ear headphones immerse you in rich, award-winning sound, everywhere you want to go</string>

    <string name="done_string">Done</string>
    <string name="try_again_string">Try Again</string>
    <string name="add_to_cart_success_title">Add to Cart</string>
    <string name="add_to_cart_success_sub_title">Successfully this product added to the Cart</string>
    <string name="add_to_cart_fail_title">Sorry!</string>
    <string name="add_to_cart_fail_sub_title">Failed to add the Cart</string>
    <string name="hello_blank_fragment">Delivery</string>

    <!-- order-->
    <string name="shippining_addreess_text">Shipping Address</string>
    <string name="total_balance_text">Total Balance</string>
    <string name="shipment_process_text">Shipment Process</string>

    <!-- rating-->
    <string name="rating_title">Rating</string>
    <string name="rating_text">Please give your rating</string>
    <string name="rating_desc_text">Please write something...</string>

    <!-- network -->
    <string name="no_network_text">No Internet</string>
    <string name="setting_text">Go to Setting</string>

    <!-- invoice -->
    <string name="invoice_item_text">Item</string>
    <string name="invoice_quantity_text">Quantity</string>
    <string name="invoice_price_text">Price</string>
    <string name="invoice_NB">Thank you for buying</string>
    <string name="invoice_download">Download invoice</string>
    <string name="invoice_copyright">All right reserved Gadget Gang 2022</string>

    <!-- sorting product -->
    <string name="sorting_by_date">Latest</string>
    <string name="sorting_by_high_price">High price</string>
    <string name="sorting_by_low_price">Low price</string>
    <string name="sorting_by_rating">Top Rated</string>


</resources>