<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sorting_product_row_background">

<!--        <RadioGroup-->
<!--            android:id="@+id/sortingBtnGroup"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sortingDateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_10dp"
                android:text="@string/sorting_by_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sortingHighPriceBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_10dp"
                android:text="@string/sorting_by_high_price" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sortingLowPriceBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_10dp"
                android:text="@string/sorting_by_low_price" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sortingTopRatedBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_10dp"
                android:text="@string/sorting_by_rating" />
        </androidx.appcompat.widget.LinearLayoutCompat>

<!--        </RadioGroup>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>