<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="invoiceModel"
            type="com.ddev.myapplication.model.OrderModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="@dimen/text_22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_12dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@{`Order id #`+invoiceModel.orderId}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8dp"
            android:text="@{`Order place date:`+invoiceModel.orderDate}"
            app:layout_constraintStart_toStartOf="@+id/textView35"
            app:layout_constraintTop_toBottomOf="@+id/textView35" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_12dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:layout_marginEnd="@dimen/size_12dp"
            android:background="@color/teal_200"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="@dimen/size_8dp"
                android:text="@string/invoice_item_text"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/productQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/size_8dp"
                android:text="@string/invoice_quantity_text"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/size_8dp"
                android:text="@string/invoice_price_text"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/invoiceRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_12dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:layout_marginEnd="@dimen/size_12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/shippining_addreess_text"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/invoiceRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/textView41" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8dp"
            android:text="@{invoiceModel.address.name}"
            app:layout_constraintStart_toStartOf="@+id/textView37"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_4dp"
            android:text="@{invoiceModel.address.phone}"
            app:layout_constraintStart_toStartOf="@+id/textView38"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_4dp"
            android:text="@{invoiceModel.address.addressDetail}"
            app:layout_constraintStart_toStartOf="@+id/textView39"
            app:layout_constraintTop_toBottomOf="@+id/textView39" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/total_balance_text"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/invoiceRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/invoiceRecyclerView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{`$`+invoiceModel.totalPrice}"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView41"
            app:layout_constraintEnd_toEndOf="@+id/invoiceRecyclerView"
            app:layout_constraintTop_toTopOf="@+id/textView41" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_12dp"
            android:layout_marginTop="@dimen/size_30dp"
            android:text="@string/invoice_NB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView40" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_20dp"
            android:text="@string/invoice_copyright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>