<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.createAccount.SignInFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/loginback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_editext_border_margin"
            android:layout_marginTop="@dimen/login_editext_border_margin_top"
            android:fontFamily="@font/gothambold"
            android:text="@string/loginText"
            android:textColor="@color/black"
            android:textSize="@dimen/loginTextSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/loginEmailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_editext_border_margin"
            android:layout_marginEnd="@dimen/login_editext_border_margin"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/signInEmailHint"
            android:padding="@dimen/login_editext_border_padding"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="@dimen/login_editext_drawable_padding"
            android:fontFamily="@font/gothambook"
            android:textSize="@dimen/login_editext_size"
            android:textColor="@color/login_edit_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView2"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/loginPasswordText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_editext_border_margin_top"
            android:layout_marginEnd="@dimen/login_editext_border_margin"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/signInPasswordHint"
            android:padding="@dimen/login_editext_border_padding"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/login_editext_drawable_padding"
            android:fontFamily="@font/gothambook"
            android:textSize="@dimen/login_editext_size"
            android:textColor="@color/login_edit_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/loginEmailText"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_editext_border_margin_top"
            android:fontFamily="@font/gothambook"
            android:text="@string/signInForgotPassword"
            android:textColor="@color/login_edit_text_color"
            android:textSize="@dimen/onBoardingDesc"
            app:layout_constraintEnd_toEndOf="@+id/loginPasswordText"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordText" />

        <CheckBox
            android:id="@+id/rememberMeCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_editext_border_margin_top"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:fontFamily="@font/gothambook"
            android:text="@string/signInRememberme"
            android:textColor="@color/login_edit_text_color"
            android:textSize="@dimen/onBoardingDesc"
            app:layout_constraintBottom_toBottomOf="@+id/forgotPasswordBtn"
            app:layout_constraintStart_toStartOf="@+id/loginPasswordText"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_editext_margin_top"
            android:background="@drawable/login_btn_background"
            android:fontFamily="@font/gothammedium"
            android:text="@string/loginText"
            android:textColor="@color/white"
            android:textSize="@dimen/login_editext_size"
            app:layout_constraintEnd_toEndOf="@+id/loginPasswordText"
            app:layout_constraintStart_toStartOf="@+id/loginPasswordText"
            app:layout_constraintTop_toBottomOf="@+id/rememberMeCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/createAccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_editext_border_margin"
            android:text="@string/newAccount"
            android:textSize="@dimen/login_editext_size"
            android:textColor="@color/login_edit_text_color"
            android:fontFamily="@font/gothammedium"
            app:layout_constraintEnd_toEndOf="@+id/signInBtn"
            app:layout_constraintStart_toStartOf="@+id/signInBtn"
            app:layout_constraintTop_toBottomOf="@+id/signInBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>