<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.createAccount.ForgotPasswordFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/ic_forgotpassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_editext_border_margin"
            android:layout_marginTop="@dimen/login_editext_border_margin_top"
            android:fontFamily="@font/gothambold"
            android:text="@string/forgot_password_text"
            android:textColor="@color/black"
            android:textSize="@dimen/loginTextSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/forgotEmailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_editext_border_margin"
            android:layout_marginEnd="@dimen/login_editext_border_margin"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/signInEmailHint"
            android:padding="@dimen/login_editext_border_padding"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="@dimen/login_editext_drawable_padding"
            android:fontFamily="@font/gothambook"
            android:textSize="@dimen/login_editext_size"
            android:textColor="@color/login_edit_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView2"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_editext_margin_top"
            android:background="@drawable/login_btn_background"
            android:fontFamily="@font/gothammedium"
            android:text="@string/forgot_submit_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/login_editext_size"
            app:layout_constraintEnd_toEndOf="@+id/forgotEmailText"
            app:layout_constraintStart_toStartOf="@+id/forgotEmailText"
            app:layout_constraintTop_toBottomOf="@+id/forgotEmailText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>