<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainRootView"
        android:background="@color/fragment_background"
        tools:context=".view.fragment.ui.ProductCategoryFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/simple_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryProductRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/soringBtn" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/soringBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_12dp"
            android:layout_marginEnd="@dimen/size_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/ic_baseline_sort_24" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sortRootView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:elevation="@dimen/size_8dp"
            android:background="@drawable/sorting_product_row_background"
            android:paddingRight="@dimen/size_50dp"
            app:layout_constraintEnd_toEndOf="@+id/soringBtn"
            app:layout_constraintTop_toTopOf="@+id/soringBtn">

            <!--        <RadioGroup-->
            <!--            android:id="@+id/sortingBtnGroup"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="match_parent"-->
            <!--            app:layout_constraintBottom_toBottomOf="parent"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toTopOf="parent">-->

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sortingDateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_10dp"
                    android:text="@string/sorting_by_date" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sortingHighPriceBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_10dp"
                    android:text="@string/sorting_by_high_price" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sortingLowPriceBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_10dp"
                    android:text="@string/sorting_by_low_price" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sortingTopRatedBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_10dp"
                    android:text="@string/sorting_by_rating" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--        </RadioGroup>-->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        <include-->
<!--            android:id="@+id/sortView"-->
<!--            layout="@layout/sorting_product_row"-->
<!--            android:visibility="visible"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/soringBtn"-->
<!--            app:layout_constraintTop_toTopOf="@+id/soringBtn" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>